# package-wrappers-unity

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python-codestyle.instructions.md
.github/workflows/: build-packages.yml
config/: packages.yaml  settings.yaml.example
docs/: pre-commit-hooks.md  unity-github-registry-limitations.md
nginx/: default.conf
src/unity_wrapper/: __init__.py  cli.py
src/unity_wrapper/core/: __init__.py  config_manager.py  git_manager.py  nuget_manager.py  package_builder.py  unity_generator.py
src/unity_wrapper/utils/: __init__.py  file_watcher.py  github_publisher.py  package_publisher.py  pages_publisher.py
templates/: assembly_definition.json.j2  package.json.j2
tests/: test_cli.py  test_config_manager.py  test_git_manager.py  test_github_publisher.py  test_license_functionality.py  test_nuget_functionality.py  test_package_builder.py  test_package_publisher.py  test_pages_publisher.py  test_unity_generator.py
unity-tester/: .gitignore
unity-tester/Assets/Scenes/: SampleScene.unity
unity-tester/Assets/Settings/: DefaultVolumeProfile.asset  Mobile_RPAsset.asset  PC_RPAsset.asset  SampleSceneProfile.asset  UniversalRenderPipelineGlobalSettings.asset
unity-tester/ProjectSettings/: EditorSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ShaderGraphSettings.asset  URPProjectSettings.asset
