[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "unity-package-wrapper"
version = "0.1.0"
description = "Automatically build Unity packages from open source repositories"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "GitPython>=3.1.40",
    "PyYAML>=6.0",
    "Jinja2>=3.1.2",
    "click>=8.1.7",
    "requests>=2.31.0",
    "watchdog>=3.0.0",
    "jsonschema>=4.19.0",
    "packaging>=23.0",
]

[tool.poetry]
package-mode = true

# Use src/ layout for packaging discovery
packages = [
    { include = "unity_wrapper", from = "src" }
]

# Ensure typing marker is included in distributions
include = [
    "src/unity_wrapper/py.typed"
]

[project.scripts]
unity-wrapper = "unity_wrapper.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
"pytest-cov" = ">=4.1.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.5.0"
"pre-commit" = ">=3.4.0"
"types-PyYAML" = ">=6.0.0"
"types-requests" = ">=2.31.0"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=unity_wrapper --cov-report=term-missing"
